Attempt to fix overlay on Safari in iOS

--- a/less/navigation.less
+++ b/less/navigation.less
@@ -20,13 +20,15 @@
 
 
 
-
+// iOS fix of VH unit
+html, body {
+    width: -webkit-calc(100% - 0px);
+}
 
 
 // --------------------------------
 //  1.   Navigation Overlay
 // --------------------------------
-
 
 
 
